# family-budget

./: .dev.env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
budget/: enums.py  filters.py  fixtures.py  models.py  permissions.py  serializers.py  urls.py  views.py
budget/management/commands/: populate_db.py
budget/migrations/: 0001_initial.py
budget/tests/: test_models.py
budget/tests/api/: test_budget_api.py  test_categories_api.py  test_transactions_api.py  test_users_api.py
family_budget/: asgi.py  settings.py  urls.py  wsgi.py
