[tool.poetry]
name = "family-budget"
version = "0.1.0"
description = ""
authors = ["zdpxdev <163684189+zdpxdev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.11"
djangorestframework = "^3.15.0"
black = "^24.3.0"
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"
django-model-utils = "^4.4.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}

[tool.black]
include = '\.pyi?$'
line_length = 88
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
